--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,138 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar:wght@400;500;600;700;800&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+*,  *:before,  *:after  {
+    -moz-box-sizing:  border-box;
+    -webkit-box-sizing:  border-box;
+    box-sizing:  border-box;
+}
+body  {
+    font-family:  'Noto Sans Myanmar', sans-serif;
+    color:  #384047;
+    /* background-image: url('https://img.freepik.com/premium-vector/abstract-purple-wavy-liquid-background_622308-5.jpg'); */
+    background-color: #673ab8;
+    background-position:  0px 0px;
+    background-repeat:  repeat;
+    animation:  animatedBackground 40s linear infinite;
+    opacity: 0.9;
+}
+@keyframes animatedBackground  {
+    from  {
+    background-position:  0 0;
+}
+to  {
+    background-position:  100% 0;
+}
+}
+form  {
+    max-width:  300px;
+    margin:  100px auto;
+    padding:  10px 20px;
+    background:  #f4f7f8;
+    border-radius:  8px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+h1  {
+    margin:  0 0 30px 0;
+    text-align:  center;
+}
+textarea , .textarea{
+    border:  none;
+    font-size:  16px;
+    height:  150px;
+    margin:  0;
+    outline:  0;
+    padding:  15px;
+    width:  100%;
+    background-color:  #e8eeef;
+    color:  #384047;
+    margin-bottom:  10px;
+	resize: none;
+}
+textarea::placeholder{
+	color: #b7b6b6;
+}
+select  {
+    padding:  6px;
+    height:  32px;
+	border: none;
+    border-bottom: 1px groove #adadad ;
+    font-size:  16px;
+    margin:  0;
+    outline:  0;
+    width:  45%;
+	background:  #f4f7f8;
+	color: #adadad;
+    margin-bottom:  10px;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+fieldset  {
+    margin-bottom:  30px;
+    border:  none;
+}
+label  {
+    display:  block;
+    margin-bottom:  8px;
+}
+label.light  {
+    font-weight:  300;
+    display:  inline;
+}
+.controls{
+	display: flex;
+	flex-direction: row;
+	padding: 10px;
+}
+i{
+	width: 50px;
+	color: #adadad;
+	font-size: 14px;
+	cursor: pointer;
+	transition: transform 0.2s ease;
+	justify-content: center;
+ }
+ i:active{
+	transform: scale(0.9);
+}
+/* 3D Button from  */
+
+
+
+
+/* CSS */
+.button-52 {
+  padding: 12px 26px;
+  border: 0;
+  font-size: 16px;
+  transition: all 150ms ease-in-out;
+  width: 100%;
+  border-radius: 8px;
+  font-weight: 600;
+
+  color: #fff;
+
+  box-shadow: #6334B5 0 0 0 1px, rgba(255, 255, 255, 0.3) 0 1px 1px 0 inset, rgba(0, 0, 0, 0.5) 0 1px 2px 0, rgba(0, 0, 0, 0.4) 0 -1px 2px 0 inset, 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  background: linear-gradient(rgba(255, 255, 255, .05) 0, transparent 100%), linear-gradient(0deg, #7B3BE9 0%, #884FEC 100%);
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.button-52:hover {
+  filter: brightness(1.1)
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.button-52:active {
+  background: linear-gradient(rgba(0, 0, 0, .05) 0, transparent 100%), linear-gradient(180deg, #7B3BE9 0%, #884FEC 100%);
+  box-shadow: #6334B5 0 0 0 1px, rgba(255, 255, 255, 0.1) 0 1px 1px 0 inset, rgba(0, 0, 0, 0.5) 0 1px 2px 0, rgba(0, 0, 0, 0.5) 0 1px 2px 0 inset, 0 4px 6px -1px rgba(0, 0, 0, 0.1);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.sort{
+    text-align: center;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.sort i{
+    font-size: x-large;
+}
+@media screen and (min-width: 480px)  {
+    form  {
+    max-width:  480px;
+}
 }
